istio/ingress-gateway-with-istio.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - http:
      paths:
      - path: /helloworld
        backend:
          serviceName: helloworld
          servicePort: 9080
      - path: /time
        backend:
          serviceName: timeservice
          servicePort: 80    
      - path: /greet
        backend:
          serviceName: greeringservice
          servicePort: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: my-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - my-gateway
  http:
  - match:  
    - uri:
        exact: /helloworld    
    route:
    - destination:
        host: helloworld
        port:
          number: 9080
  - match:  
    - uri:
        exact: /time    
    route:
    - destination:
        host: timeservice
        port:
          number: 80
  - match:  
    - uri:
        exact: /greet    
    route:
    - destination:
        host: greetingservice
        port:
          number: 80
